# claw-sama

./: .gitignore  .npmignore  LICENSE  README.md  index.ts  openclaw.plugin.json  package.json
.github/workflows/: release.yml
app/: index.html  package.json
app/public/: angryPump.fbx  excited.fbx  greeting.fbx  point.fbx  salute.fbx  shy.fbx
app/src/: App.tsx  emote.ts  lip-sync.ts  motion-controller.ts  openclaw-url.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  speech_macos.rs
app/src/components/: ChatInput.tsx  HistoryPanel.tsx  MoodIndicator.tsx  SettingsPanel.tsx  TextBubble.tsx  VRMScene.tsx
app/src/hooks/: usePassThrough.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/win32-x64/: package.json
src/: channel.ts  prefs.ts  runtime.ts  sse.ts  tauri-launcher.ts  text-utils.ts  tts.ts
