[package]
name = "claw-sama"
version = "0.1.0"
description = "Claw Sama Desktop Pet"
authors = []
edition = "2021"

[lib]
name = "claw_sama_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claw-sama"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[features]
devtools = []

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }
block2 = "0.6"
